--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dev": "gulp watch"
   },
   "devDependencies": {
+    "flatpickr": "^2.0.8",
     "foundation-sites": "6.2.4",
     "gulp": "^3.9.1",
     "jquery": "^3.1.0",
@@ -13,6 +14,7 @@
     "laravel-elixir-webpack-official": "^1.0.2",
     "lodash": "^4.16.2",
     "vue": "^2.0.1",
-    "vue-resource": "^1.0.3"
+    "vue-resource": "^1.0.3",
+    "xhr": "^2.2.2"
   }
 }
