--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "laravel-elixir-webpack-official": "^1.0.2",
     "lodash": "^4.16.2",
     "vue": "^2.0.1",
-    "vue-resource": "^1.0.3"
+    "vue-resource": "^1.0.3",
+    "vue-validator": "^3.0.0-alpha.1"
   }
 }
