Added vue flatpickr

--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   },
   "devDependencies": {
     "dropzone": "^4.3.0",
-    "flatpickr": "^2.0.8",
     "foundation-sites": "6.2.4",
     "gulp": "^3.9.1",
     "jquery": "^3.1.0",
@@ -15,6 +14,7 @@
     "laravel-elixir-webpack-official": "^1.0.2",
     "lodash": "^4.16.2",
     "vue": "^2.0.1",
+    "vue-flatpickr": "^2.0.3",
     "vue-resource": "^1.0.3"
   }
 }
