--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "laravel-elixir-vue-2": "^0.2.0",
     "laravel-elixir-webpack-official": "^1.0.2",
     "lodash": "^4.16.2",
+    "nightwatch": "^0.9.9",
     "sweetalert": "^1.1.3",
     "vue": "^2.0.1",
     "vue-flatpickr": "^2.0.3",
