--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "sweetalert": "^1.1.3",
     "vue": "^2.0.6",
     "vue-flatpickr": "^2.0.3",
-    "vue-resource": "^1.0.3"
+    "vue-resource": "^1.0.3",
+    "moment": "^2.15.2"
   }
 }
