--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "lodash": "^4.16.2",
     "nightwatch": "^0.9.9",
     "sweetalert": "^1.1.3",
-    "vue": "2.0.5",
-    "vue-flatpickr": "^2.0.3",
+    "vue": "^2.1.5",
+    "vue-flatpickr": "^2.2.0",
     "vue-resource": "^1.0.3",
     "moment": "^2.15.2"
   }
