--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,9 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=5.6.4",
-        "laravel/framework": "5.3.*",
+        "php": ">=7.0",
+        "laravel/framework": "5.4.*",
+        "laravel/dusk": "^1.0.5",
         "webpatser/laravel-uuid": "^2.0",
         "h4cc/wkhtmltopdf-amd64": "0.12.x",
         "barryvdh/laravel-snappy": "^0.3.1"
@@ -14,11 +15,13 @@
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~5.0",
+        "phpunit/phpunit": "~6.0",
+        "phpunit/dbunit": ">=1.2",
         "symfony/css-selector": "3.1.*",
         "symfony/dom-crawler": "3.1.*",
-        "barryvdh/laravel-ide-helper": "v2.2.1",
-        "tightenco/mailthief": "^0.3.3"
+        "barryvdh/laravel-ide-helper": "*",
+        "tightenco/mailthief": "^0.3.3",
+        "laravel/browser-kit-testing": "^1.0"
     },
     "autoload": {
         "classmap": [
@@ -30,7 +33,8 @@
     },
     "autoload-dev": {
         "classmap": [
-            "tests/TestCase.php"
+            "tests/TestCase.php",
+            "tests/BrowserKitTest.php"
         ]
     },
     "scripts": {
