--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,9 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=5.6.4",
-        "laravel/framework": "5.3.*",
+        "php": ">=7.0",
+        "laravel/framework": "5.4.*",
+        "laravel/dusk": "*",
         "webpatser/laravel-uuid": "^2.0",
         "h4cc/wkhtmltopdf-amd64": "0.12.x",
         "barryvdh/laravel-snappy": "^0.3.1"
@@ -14,10 +15,10 @@
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~5.0",
+        "phpunit/phpunit": "~6.0",
         "symfony/css-selector": "3.1.*",
         "symfony/dom-crawler": "3.1.*",
-        "barryvdh/laravel-ide-helper": "v2.2.1",
+        "barryvdh/laravel-ide-helper": "^v2.2.3",
         "tightenco/mailthief": "^0.3.3"
     },
     "autoload": {
@@ -30,7 +31,9 @@
     },
     "autoload-dev": {
         "classmap": [
-            "tests/TestCase.php"
+            "tests/TestCase.php",
+            "tests/DuskTestCase.php",
+            "tests/CreatesApplication.php"
         ]
     },
     "scripts": {
