--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravel/dusk": "^1.0.5",
         "webpatser/laravel-uuid": "^2.0",
         "h4cc/wkhtmltopdf-amd64": "0.12.x",
-        "barryvdh/laravel-snappy": "^0.3.1"
+        "barryvdh/laravel-snappy": "^0.3.1",
+        "maatwebsite/excel": "~2.1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
