--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~6.0",
+        "phpunit/phpunit": "^5.7",
         "phpunit/dbunit": ">=1.2",
         "symfony/css-selector": "3.1.*",
         "symfony/dom-crawler": "3.1.*",
