--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "webpatser/laravel-uuid": "^2.0",
         "h4cc/wkhtmltopdf-amd64": "0.12.x",
         "barryvdh/laravel-snappy": "^0.3.1",
+        "spatie/laravel-migrate-fresh": "^1.4",
         "maatwebsite/excel": "~2.1.0"
     },
     "require-dev": {
