--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "h4cc/wkhtmltopdf-amd64": "0.12.x",
         "barryvdh/laravel-snappy": "^0.3.1",
         "spatie/laravel-migrate-fresh": "^1.4",
-        "maatwebsite/excel": "~2.1.0"
+        "maatwebsite/excel": "~2.1.0",
+        "uxweb/sweet-alert": "^1.4"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
