--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
         "barryvdh/laravel-snappy": "^0.3.1",
         "spatie/laravel-migrate-fresh": "^1.4",
         "maatwebsite/excel": "~2.1.0",
-        "sentry/sentry-laravel": "^0.8.0"
+        "sentry/sentry-laravel": "^0.8.0",
+        "league/flysystem-aws-s3-v3": "^1.0",
+        "laravel/tinker": "^1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
